# ioi-isr-task

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/skills/iloi-cms-task/: SKILL.md
.claude/skills/iloi-cms-task/references/: cms-internals.md  distribution-audit.md  red-teaming.md  verification.md
.claude/skills/iloi-cms-task/templates/: checker.cpp  classify_and_rename.py  grader.cpp  setup_cms.sh  task.yaml  validator_base.cpp
.github/workflows/: dataset.yml  deploy.yml  drift.yml  probe.yml  verify.yml
cmsops/: analytics.py  client.py  config.py  contest.py  deploy.py  drift.py  verify.py  verify_cms.py
docker/: docker-compose.test-ports.yml  docker-compose.verify.yml
docs/: boss-brief.md  secrets.md  service-accounts.md  using-the-agent.md
docs/decisions/: 0002-verify-proof.md
scripts/: testcms_up.sh  verify_contest_setup.py
skills/cms-analytics/: SKILL.md
tasks/_template/: README.md
tasks/aplusb/: task.yaml
tasks/aplusb/solutions/: full.cpp  weak_int32.cpp
tasks/aplusb/tests/: input_ST1_ST2_003.txt  input_ST2_005.txt
tests/: conftest.py  test_analytics.py  test_client.py  test_client_http.py  test_client_unit.py  test_config.py  test_contest.py  test_deploy.py  test_drift.py  test_verify_unit.py
